fix: fixed responsive

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         </div>
         <div class="hero_info">
             <p>
-                I AM A DEVELOPER & UX/UI DESIGNER BASED IN ARGENTINA. IN LOVE WITH MINIMALISM, CRAZY ABOUT DIGITAL
-                PRODUCTS
+                I AM A DEVELOPER & UX/UI DESIGNER BASED IN ARGENTINA
             </p>
 
             <a href="#work" class="anchor">
@@ -312,12 +311,15 @@
         <h2 class="section_header to_load">
             <span>ABOUT</span>
         </h2>
-
-        <div class="about_wrapper to_load">
-            <img src="./assets/me.jpg">
+        <div class="about_heading">
+            <div class="about_wrapper to_load">
+                <img src="./assets/me.jpg">
+            </div>
+            <div class="about_heading_text_wrapper">
+                <h3>DANIEL HERNANDEZ</h3>
+                <h4>DEVELOPER, DESIGNER & MARKETER</h4>
+            </div>
         </div>
-        <h3>DANIEL HERNANDEZ</h3>
-        <h4>DEVELOPER, DESIGNER & MARKETER</h4>
         <p>
             I STUDIED <span>DIGITAL MARKETING AND ADVERTISING</span>. I ENJOY NEWBORN
             PRODUCTS WHERE I CAN GO THROUGH IT'S DIFERENT STAGES, FROM BRAINSTORMING, TO DESIGN &
