--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Daniel Hernandez</title>
+    <meta name="description" content="MY WEBSITE">
 
 
     <link rel="stylesheet" href="./styles/main.css">
