--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header>
+    <header name="HEADER">
         <nav id="nav">
             <div class="nav_wrapper">
                 <a class="menu_item" href="#hero">DANIEL HERNANDEZ</a>
