--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <h2 class="section_header to_load">
             <span>WORK</span>
         </h2>
-        <p class="to_load">
+        <h4 class="work_subheader to_load">
             A SAMPLE OF MY RECENT WORK
-        </p>
+        </h4>
         <!-- <div class="work_text">
         </div> -->
         <div class="work_projects">
