--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header name="TEST2">
+    <header>
         <nav id="nav">
             <div class="nav_wrapper">
                 <a class="menu_item" href="#hero">DANIEL HERNANDEZ</a>
@@ -80,10 +80,10 @@
         <!-- <div class="work_text">
         </div> -->
         <div class="work_projects">
-            <a class="project to_load">QUANTIA <span>SOFTWARE</span> </a>
-            <a class="project to_load">BLUE <span>WEBSITE</span> </a>
-            <a class="project to_load">BRUH <span>WEBSITE</span> </a>
-            <a class="project to_load">BRUH <span>WEBSITE</span> </a>
+            <a class="project to_load">QUANTIA<span>SOFTWARE</span> </a>
+            <a class="project to_load">BLUE<span>WEBSITE</span> </a>
+            <a class="project to_load">IN PROCESS <span>WEBSITE</span> </a>
+            <a class="project to_load">IN PROCESS<span>WEBSITE</span> </a>
         </div>
 
     </section>
@@ -191,35 +191,14 @@
             </div>
 
             <div class="modal_info">
-
                 <p>
-                    A MODERN LOOK WEBSITE FOR BLUE ASESORAMIENTO E INVERSIONES, A REAL ESTATE & INVESTMENTS
-                    COMPANY FROM ARGENTINA
+                    QUANTIA IS AN OPEN-SOURCE SOFTWARE BUILT TO HELP SMALL BUSINESS TO KEEP A SIMPLE STOCK AND KEEP
+                    THINGS REGISTERED
                 </p>
 
-                <a class="anchor" rel="noopener noreferer" target="_blank" href="">BLUE
-                    <svg class="anchor_svg" viewBox="0 0 90 90">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
-
-                <p>BUILT WITH SASS, REACT & VITE</p>
-
-                <img class="modal_mockups" src="./assets/">
-
-                <p>WE WORKED AROUND THE IDEA OF BUILDING A SIMPLE
-                    LAYOUT THAT COULD BE RELATED TO THE BUSINESS CORE: BLOCKS</p>
-                <p>THIS FORMULA WOULD ALLOW US TO DISPLAY IMAGES PROPERLY ON CAROUSELS LATER ON, AND ALSO
-                    MAKES A CLEAR DISTINCTION BETWEEN DIFFERENT POSTS</p>
-                <p>TECHNICALLY SPEAKING, I TRIED A LOT OF NEW CONCEPTS IN THIS PROJECT AND LEARNT ABOUT CAROUSELS,
-                    PRODUCTION BUILDS, HOSTING, DNS, AUTO DEPLOYMENT, OPTIMIZING IMAGES IN PHOTOSHOP, SVG, AMONG
-                    ANOTHER LOT OF THINGS. IT WAS FUNNY</p>
-                <a class="anchor" rel="noopener noreferer" target="_blank">BLUE
-                    <svg class="anchor_svg" viewBox="0 0 90 90">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
-
+                <p>
+                    QUANTIA IS CURRENTLY IN PROCESS...
+                </p>
             </div>
         </div>
     </div>
@@ -283,7 +262,7 @@
 
 
 
-    <div BLUE class="modal_wrapper">
+    <div class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -295,51 +274,21 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>BLUE</h3>
+                    <h3>IN PROCESS...</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    A MODERN LOOK WEBSITE FOR BLUE ASESORAMIENTO E INVERSIONES, A REAL ESTATE & INVESTMENTS
-                    COMPANY FROM ARGENTINA
+                    THIS IS A SUPRISE PROJECT
                 </p>
-
-                <a class="anchor" rel="noopener noreferer" target="_blank" href="https://blueasesoramiento.website">BLUE
-                    <svg class="anchor_svg" viewBox="0 0 93 91">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
-
-                <p>BUILT WITH SASS, REACT & VITE</p>
-
-                <img class="modal_mockups" src="./assets/blue-mockup.png">
-
-                <p>WE WORKED AROUND THE IDEA OF BUILDING A SIMPLE
-                    LAYOUT THAT COULD BE RELATED TO THE BUSINESS CORE: BLOCKS</p>
-                <p>THIS FORMULA WOULD ALLOW US TO DISPLAY IMAGES PROPERLY ON CAROUSELS LATER ON, AND ALSO
-                    MAKES A CLEAR DISTINCTION BETWEEN DIFFERENT POSTS</p>
-
-                <img class="modal_mockups" src="./assets/blue-mockup-2.png">
-
-                <p>TECHNICALLY SPEAKING, I TRIED A LOT OF NEW CONCEPTS IN THIS PROJECT AND LEARNT ABOUT CAROUSELS,
-                    PRODUCTION BUILDS, HOSTING, DNS, AUTO DEPLOYMENT, OPTIMIZING IMAGES IN PHOTOSHOP, SVG, AMONG
-                    ANOTHER LOT OF THINGS. IT WAS FUNNY</p>
-                <a class="anchor" rel="noopener noreferer" target="_blank" href="https://blueasesoramiento.website">BLUE
-                    <svg class="anchor_svg" viewBox="0 0 93 91">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
 
             </div>
         </div>
     </div>
 
-
-
-
-    <div BLUE class="modal_wrapper">
+    <div class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -351,46 +300,23 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>BLUE</h3>
+                    <h3>IN PROCESS...</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    A MODERN LOOK WEBSITE FOR BLUE ASESORAMIENTO E INVERSIONES, A REAL ESTATE & INVESTMENTS
-                    COMPANY FROM ARGENTINA
+                    THIS IS A SUPRISE PROJECT
                 </p>
-
-                <a class="anchor" rel="noopener noreferer" target="_blank" href="https://blueasesoramiento.website">BLUE
-                    <svg class="anchor_svg" viewBox="0 0 93 91">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
-
-                <p>BUILT WITH SASS, REACT & VITE</p>
-
-                <img class="modal_mockups" src="./assets/blue-mockup.png">
-
-                <p>WE WORKED AROUND THE IDEA OF BUILDING A SIMPLE
-                    LAYOUT THAT COULD BE RELATED TO THE BUSINESS CORE: BLOCKS</p>
-                <p>THIS FORMULA WOULD ALLOW US TO DISPLAY IMAGES PROPERLY ON CAROUSELS LATER ON, AND ALSO
-                    MAKES A CLEAR DISTINCTION BETWEEN DIFFERENT POSTS</p>
-
-                <img class="modal_mockups" src="./assets/blue-mockup-2.png">
-
-                <p>TECHNICALLY SPEAKING, I TRIED A LOT OF NEW CONCEPTS IN THIS PROJECT AND LEARNT ABOUT CAROUSELS,
-                    PRODUCTION BUILDS, HOSTING, DNS, AUTO DEPLOYMENT, OPTIMIZING IMAGES IN PHOTOSHOP, SVG, AMONG
-                    ANOTHER LOT OF THINGS. IT WAS FUNNY</p>
-                <a class="anchor" rel="noopener noreferer" target="_blank" href="https://blueasesoramiento.website">BLUE
-                    <svg class="anchor_svg" viewBox="0 0 93 91">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
 
             </div>
         </div>
     </div>
+
+
+
+
 
 </body>
 
