--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Daniel Hernandez, developer and designer">
 
 
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css?v=1.1.0">
 
     <script defer type="module" src="./javascript/index.js"></script>
     <script defer type="module" src="./javascript/hamburger.js"></script>
