--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="language" content="english">
+    <meta name="author" content="Daniel Hernandez">
+    <meta name="audience" content="all">
+
+    <meta name="icon" type="image/x-icon" href="./assets/favicon.ico">
     <title>Daniel Hernandez</title>
-    <meta name="description" content="Daniel Hernandez, developer and designer">
+    <meta name="description"
+        content="Daniel Hernandez. Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
+
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="Daniel Hernandez">
+    <meta name="og:image" content="./assets/og-img.png">
+    <meta name="og:description"
+        content="Daniel Hernandez. Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
+
+    <meta name="twitter:title" content="Daniel Hernandez">
+    <meta name="twitter:image" content="./assets/og-img.png">
+    <meta name="twitter:description"
+        content="Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
+
+    <meta itemprop="telephone" content="+5493401415091">
 
 
-    <link rel="stylesheet" href="./styles/main.css?v=1.1.1">
+    <meta name="robots" content="index, all, follow">
+
+
+    <link rel="stylesheet" href="./styles/main.css?v=1.1.2">
 
     <script defer type="module" src="./javascript/index.js"></script>
     <script defer type="module" src="./javascript/hamburger.js"></script>
