--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="og:title" content="Daniel Hernandez">
     <meta name="og:image" content="./assets/og-img.png">
     <meta name="og:description"
-        content="Daniel Hernandez. Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
+        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
 
     <meta name="twitter:title" content="Daniel Hernandez">
     <meta name="twitter:image" content="./assets/og-img.png">
