--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Daniel Hernandez">
     <meta name="audience" content="all">
 
+    <link rel="icon" href="/assets/favicon.png" type="image/png">
     <title>Daniel Hernandez</title>
     <meta name="description"
         content="Daniel Hernandez. Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
