--- a/index.html
+++ b/index.html
@@ -6,38 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="language" content="english">
-    <meta name="author" content="Daniel Hernandez">
-    <meta name="audience" content="all">
+    <!-- STYLES -->
+    <link rel="stylesheet" href="./styles/main.css?v=1.1.3">
+    <!-- SCRIPTS -->
+    <script defer type="module" src="./javascript/index.js"></script>
+    <script defer type="module" src="./javascript/hamburger.js"></script>
+    <script defer type="module" src="./javascript/clock.js"></script>
+    <script defer type="module" src="./javascript/modal.js"></script>
 
+    <!-- BROWSER -->
     <link rel="icon" href="/assets/favicon.png" type="image/png">
     <title>Daniel Hernandez</title>
     <meta name="description"
         content="Daniel Hernandez. Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
-
+    <!-- DATA -->
+    <meta name="language" content="english">
+    <meta name="author" content="Daniel Hernandez">
+    <meta name="audience" content="all">
+    <meta itemprop="telephone" content="+5493401415091">
+    <meta name="robots" content="index, all, follow">
+    <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
     <meta name="og:type" content="website">
     <meta name="og:title" content="Daniel Hernandez">
     <meta name="og:image" content="./assets/og-img.png">
     <meta name="og:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
-
     <meta name="twitter:title" content="Daniel Hernandez">
     <meta name="twitter:image" content="./assets/og-img.png">
     <meta name="twitter:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
 
-    <meta itemprop="telephone" content="+5493401415091">
 
 
-    <meta name="robots" content="index, all, follow">
 
 
-    <link rel="stylesheet" href="./styles/main.css?v=1.1.3">
-
-    <script defer type="module" src="./javascript/index.js"></script>
-    <script defer type="module" src="./javascript/hamburger.js"></script>
-    <script defer type="module" src="./javascript/clock.js"></script>
-    <script defer type="module" src="./javascript/modal.js"></script>
 </head>
 
 <body>
