--- a/index.html
+++ b/index.html
@@ -226,9 +226,6 @@
         </div>
     </div>
 
-
-
-
     <div BLUE class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
@@ -282,9 +279,6 @@
         </div>
     </div>
 
-
-
-
     <div class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
@@ -297,14 +291,14 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>IN PROCESS...</h3>
+                    <h3>SOON</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    THIS IS A SUPRISE PROJECT
+                    THIS IS A PROJECT IN PROCESS. WILL BE AVAILABLE COMING SOON
                 </p>
 
             </div>
@@ -323,14 +317,14 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>IN PROCESS...</h3>
+                    <h3>SOON</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    THIS IS A SUPRISE PROJECT
+                    THIS IS ANOTHER PROJECT IN PROCESS. WILL BE AVAILABLE COMING SOON
                 </p>
 
             </div>
