--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <div class="work_projects">
             <a class="project to_load">QUANTIA<span>SOFTWARE</span> </a>
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
-            <a class="project to_load">IN PROCESS <span>WEBSITE</span> </a>
-            <a class="project to_load">IN PROCESS<span>WEBSITE</span> </a>
+            <a class="project to_load">C.SOON <span>WEBSITE</span> </a>
+            <a class="project to_load">C.SOON<span>WEBSITE</span> </a>
         </div>
 
     </section>
@@ -291,7 +291,7 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>SOON</h3>
+                    <h3>COMING SOON</h3>
                 </div>
             </div>
 
@@ -317,7 +317,7 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>SOON</h3>
+                    <h3>COMING SOON</h3>
                 </div>
             </div>
 
