--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
     <meta itemprop="telephone" content="+5493401415091">
     <meta name="robots" content="index, all, follow">
     <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
-    <meta name="og:type" content="website">
-    <meta name="og:title" content="Daniel Hernandez">
-    <meta name="og:image" content="./assets/og-img.png">
-    <meta name="og:description"
+    <meta property="og:url" content="https://www.dherrrnandez.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Daniel Hernandez">
+    <meta property="og:image" content="./assets/a-og-img.png">
+    <meta property="og:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
     <meta name="twitter:title" content="Daniel Hernandez">
-    <meta name="twitter:image" content="./assets/og-img.png">
+    <meta name="twitter:image" content="./assets/a-og-img.png">
     <meta name="twitter:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
 
