--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <meta name="author" content="Daniel Hernandez">
     <meta name="audience" content="all">
     <meta itemprop="telephone" content="+5493401415091">
-    <meta name="robots" content="index, all, follow">
+    <meta property="article:published_time" content="2022-11-20" />
     <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
+    <meta name="robots" content="index, all, follow">
     <meta property="og:url" content="https://www.dherrrnandez.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Daniel Hernandez">
