--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <meta property="article:published_time" content="2022-11-20" />
     <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
     <meta name="robots" content="index, all, follow">
-    <meta property="og:url" content="https://www.dherrrnandez.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Daniel Hernandez">
-    <meta property="og:image" content="./assets/a-og-img.png">
-    <meta property="og:description"
+    <meta name="og:url" content="https://www.dherrrnandez.com/">
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="Daniel Hernandez">
+    <meta name="og:image" content="./assets/a-og-img.png">
+    <meta name="og:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
     <meta name="twitter:title" content="Daniel Hernandez">
     <meta name="twitter:image" content="./assets/a-og-img.png">
