--- a/index.html
+++ b/index.html
@@ -13,34 +13,27 @@
     <script defer type="module" src="./javascript/hamburger.js"></script>
     <script defer type="module" src="./javascript/clock.js"></script>
     <script defer type="module" src="./javascript/modal.js"></script>
-
     <!-- BROWSER -->
     <link rel="icon" href="/assets/favicon.png" type="image/png">
     <title>Daniel Hernandez</title>
-    <meta name="description"
-        content="Daniel Hernandez. Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
     <!-- DATA -->
     <meta name="language" content="english">
     <meta name="author" content="Daniel Hernandez">
     <meta name="audience" content="all">
+    <meta name="publish_date" property="og:published_date" content="2022-11-20" />
     <meta itemprop="telephone" content="+5493401415091">
-    <meta property="article:published_time" content="2022-11-20" />
     <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
     <meta name="robots" content="index, all, follow">
-    <meta name="og:url" content="https://www.dherrrnandez.com/">
-    <meta name="og:type" content="website">
-    <meta name="og:title" content="Daniel Hernandez">
-    <meta name="og:image" content="./assets/a-og-img.png">
-    <meta name="og:description"
+    <meta name="url" property="og:url" content="https://www.dherrrnandez.com/">
+    <meta name="type" property="og:type" content="website">
+    <meta name="title" property="og:title" content="Daniel Hernandez">
+    <meta name="image" property="og:image" content="./assets/og-img.png">
+    <meta name="description" property="og:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
     <meta name="twitter:title" content="Daniel Hernandez">
-    <meta name="twitter:image" content="./assets/a-og-img.png">
+    <meta name="twitter:image" content="./assets/og-img.png">
     <meta name="twitter:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer in design and development projects. Available to work">
-
-
-
-
 
 </head>
 
