--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- BROWSER -->
     <link rel="icon" href="/assets/favicon.png" type="image/png">
     <title>Daniel Hernandez</title>
+    <meta name="description"
+        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
     <!-- DATA -->
     <meta name="language" content="english">
     <meta name="author" content="Daniel Hernandez">
@@ -28,7 +30,7 @@
     <meta name="type" property="og:type" content="website">
     <meta name="title" property="og:title" content="Daniel Hernandez">
     <meta name="image" property="og:image" content="./assets/og-img.png">
-    <meta name="description" property="og:description"
+    <meta property="og:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
     <meta name="twitter:title" content="Daniel Hernandez">
     <meta name="twitter:image" content="./assets/og-img.png">
