--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="/assets/favicon.png" type="image/png">
     <title>Daniel Hernandez</title>
     <meta name="description"
-        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work and team up to make digital products">
+        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work or team up to make digital products">
     <!-- DATA -->
     <meta name="language" content="english">
     <meta name="author" content="Daniel Hernandez">
@@ -31,7 +31,7 @@
     <meta name="title" property="og:title" content="Daniel Hernandez">
     <meta name="image" property="og:image" content="./assets/og-img.png">
     <meta property="og:description"
-        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work">
+        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work or team up to make digital products">
     <meta name="twitter:title" content="Daniel Hernandez">
     <meta name="twitter:image" content="./assets/og-img.png">
     <meta name="twitter:description"
