--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
     <meta name="robots" content="index, all, follow">
     <meta name="url" property="og:url" content="https://www.dherrrnandez.com/">
-    <meta name="type" property="og:type" content="website">
-    <meta name="title" property="og:title" content="Daniel Hernandez">
-    <meta name="image" property="og:image" content="./assets/og-img.png">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Daniel Hernandez">
+    <meta property="og:image" content="./assets/og-img.png">
     <meta property="og:description"
         content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work or team up to make digital products">
     <meta name="twitter:title" content="Daniel Hernandez">
