--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="language" content="english">
     <meta name="author" content="Daniel Hernandez">
     <meta name="audience" content="all">
-    <meta property="publish_time" content="2022-11-20" />
+    <meta property="article:published_time" content="2022-11-20" />
     <meta itemprop="telephone" content="+5493401415091">
     <!-- SOCIAL MEDIA AND SEARCH ENGINES -->
     <meta name="robots" content="index, all, follow">
