--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 I AM A DEVELOPER & UX/UI DESIGNER BASED IN ARGENTINA
             </p>
 
-            <a href="#work" class="anchor">
+            <a href="./assets/resume-en.pdf" class="anchor">
                 RESUME <svg class="anchor_svg" viewBox="0 0 90 90">
                     <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
                 </svg>
