--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- <div class="work_text">
         </div> -->
         <div class="work_projects">
-            <a class="project to_load">QUANTIA<span>SOFTWARE</span> </a>
+            <a class="project to_load">MOOSHU<span>SOFTWARE</span> </a>
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
             <a class="project to_load">C.SOON <span>WEBSITE</span> </a>
             <a class="project to_load">C.SOON<span>WEBSITE</span> </a>
@@ -194,7 +194,7 @@
 
 
 
-    <div QUANTIA class="modal_wrapper">
+    <div MOOSHU class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -206,18 +206,27 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>QUANTIA</h3>
+                    <h3>MOOSHU</h3>
                 </div>
             </div>
 
             <div class="modal_info">
                 <p>
-                    QUANTIA IS AN OPEN-SOURCE SOFTWARE BUILT TO HELP SMALL BUSINESS TO KEEP A SIMPLE STOCK AND KEEP
-                    THINGS REGISTERED
+                    MOOSHU IS AN OPEN-SOURCE CASH REGISTER SOFTWARE WITH A MINIMAL APPROACH.
                 </p>
 
+                <img class="modal_mockups" src="./assets/mooshu-mockup.jpg">
+
                 <p>
-                    QUANTIA IS CURRENTLY IN PROCESS...
+                    MOOSHU IS MEANT TO BE AN INTRODUCTORY SOFTWARE FOR THOSE SMALL BUSINESS THAT ARE WORKING WITHOUT ANY
+                    DIGITAL PRODUCT TO MAKE ITS ACTIVITIES EASIER.
+                </p>
+
+                <p>IT'S FOCUS IN SIMPLICITY
+                    MAKES IT EASY TO LEARN & EASY TO WORK WITH IN A DAILY BASIS</P>
+
+                <p>
+                    MOOSHU IS CURRENTLY IN DEVELOPMENT. I AM WORKING TO RELEASE THE FIRST STABLE VERSION.
                 </p>
             </div>
         </div>
