update: re-csset project added

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="work_projects">
             <a class="project to_load">MOOSHU<span>SOFTWARE</span> </a>
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
-            <a class="project to_load">C.SOON <span>WEBSITE</span> </a>
-            <a class="project to_load">C.SOON<span>WEBSITE</span> </a>
+            <a class="project to_load">MOOSHU <span>WEBSITE</span> </a>
+            <a class="project to_load">RE-CSSET<span>PACKAGE</span> </a>
         </div>
 
     </section>
@@ -285,7 +285,7 @@
         </div>
     </div>
 
-    <div class="modal_wrapper">
+    <div MOOSHU class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -311,7 +311,7 @@
         </div>
     </div>
 
-    <div class="modal_wrapper">
+    <div RE-CSSET class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -323,14 +323,34 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>COMING SOON</h3>
+                    <h3>RE-CSSET</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    THIS IS ANOTHER PROJECT IN PROCESS. WILL BE AVAILABLE COMING SOON
+                    RE-CSSET IS A NPM PACKAGE TO REMOVE AND OVERRIDE THE DEFAULT BROWSER STYLES. THIS MAKES STYLING A
+                    LOT EASIER AND CROSS-BROWSER BY DEFAULT.
+                </p>
+
+                <a class="anchor" rel="noopener noreferer" target="_blank"
+                    href="https://github.com/dherrrnandez/re-csset">RE-CSSET
+                    <svg class="anchor_svg" viewBox="0 0 93 91">
+                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                    </svg>
+                </a>
+
+                <img class="modal_mockups" src="./assets/re-csset-mockup.jpg">
+
+                <p>
+                    I USED THIS RESET.CSS FILE A LOT OF TIME, BUT I DECIDED TO MAKE IT A PACKAGE TO SHARE IT AND ALSO TO
+                    IMPORT IT FASTER
+                </p>
+
+                <p>
+                    I LEARNT HOW TO CREATE NPM PACKAGES DURING THIS PROJECT. ALSO I KNOW NOW HOW TO DEAL WITH NODE
+                    MODULES
                 </p>
 
             </div>
