update: added mooshu website project

--- a/index.html
+++ b/index.html
@@ -297,15 +297,28 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>COMING SOON</h3>
+                    <h3>MOOSHU WEBSITE</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    THIS IS A PROJECT IN PROCESS. WILL BE AVAILABLE COMING SOON
+                    THIS IS MOOSHU'S WEBSITE. I WORKED AROUND THE SAME COLORS OF THE SOFTWARE AND KEEPT THE SAME
+                    AESTHETIC.
                 </p>
+
+                <!-- <a class="anchor" rel="noopener noreferer" target="_blank" href="">MOOSHU
+                    <svg class="anchor_svg" viewBox="0 0 93 91">
+                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                    </svg>
+                </a> -->
+
+                <p>
+                    I'M CURRENTLY WORKING TO PUBLISH THIS WEBSITE
+                </p>
+
+                <img class="modal_mockups" src="./assets/mooshu-website-mockup.jpg">
 
             </div>
         </div>
@@ -356,10 +369,6 @@
             </div>
         </div>
     </div>
-
-
-
-
 
 </body>
 
