--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
         <!-- <div class="work_text">
         </div> -->
         <div class="work_projects">
-            <a class="project to_load">MOOSHU<span>SOFTWARE</span> </a>
+            <a class="project to_load">MOOSHU<span>WEB APP</span> </a>
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
             <a class="project to_load">MOOSHU <span>WEBSITE</span> </a>
             <a class="project to_load">RE-CSSET<span>PACKAGE</span> </a>
+            <a class="project to_load">B-MAKER<span>PROJECT</span> </a>
+            <a class="project to_load">CALC<span>PROJECT</span> </a>
         </div>
 
     </section>
@@ -212,22 +214,30 @@
 
             <div class="modal_info">
                 <p>
-                    MOOSHU IS AN OPEN-SOURCE CASH REGISTER SOFTWARE WITH A MINIMAL APPROACH.
+                    MOOSHU IS WEB CASH REGISTER APP WITH A MINIMAL APPROACH
                 </p>
 
                 <img class="modal_mockups" src="./assets/mooshu-mockup.jpg">
 
                 <p>
-                    MOOSHU IS MEANT TO BE AN INTRODUCTORY SOFTWARE FOR THOSE SMALL BUSINESS THAT ARE WORKING WITHOUT ANY
-                    DIGITAL PRODUCT TO MAKE ITS ACTIVITIES EASIER.
+                    MOOSHU IS MEANT TO BE DEVELOPED AFTER AS AN INTRODUCTORY SOFTWARE FOR THOSE SMALL BUSINESS THAT ARE
+                    WORKING WITHOUT ANY
+                    DIGITAL PRODUCT TO MAKE ITS ACTIVITIES EASIER
                 </p>
 
                 <p>IT'S FOCUS IN SIMPLICITY
                     MAKES IT EASY TO LEARN & EASY TO WORK WITH IN A DAILY BASIS</P>
 
                 <p>
-                    MOOSHU IS CURRENTLY IN DEVELOPMENT. I AM WORKING TO RELEASE THE FIRST STABLE VERSION.
+                    MOOSHU IS CURRENTLY IN DEVELOPMENT
                 </p>
+
+                <a class="anchor" rel="noopener noreferer" target="_blank"
+                    href="https://github.com/dherrrnandez/mooshu">THIS IS THE REPOSITORY
+                    <svg class="anchor_svg" viewBox="0 0 93 91">
+                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
@@ -305,20 +315,33 @@
 
                 <p>
                     THIS IS MOOSHU'S WEBSITE. I WORKED AROUND THE SAME COLORS OF THE SOFTWARE AND KEEPT THE SAME
-                    AESTHETIC.
+                    AESTHETIC
                 </p>
 
-                <!-- <a class="anchor" rel="noopener noreferer" target="_blank" href="">MOOSHU
+                <a class="anchor" rel="noopener noreferer" target="_blank"
+                    href="https://dherrrnandez.github.io/mooshu-website/">MOOSHU
                     <svg class="anchor_svg" viewBox="0 0 93 91">
                         <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
                     </svg>
-                </a> -->
-
-                <p>
-                    I'M CURRENTLY WORKING TO PUBLISH THIS WEBSITE
-                </p>
+                </a>
 
                 <img class="modal_mockups" src="./assets/mooshu-website-mockup.jpg">
+
+                <p>
+                    I DID EMPHASIS ON KEEPING THE AESTHETIC OF THE MOOSHU PROJECT. IT'S BUILT WITH VANILLA JS, AND SASS
+
+                </p>
+
+                <p>
+                    I USED ANOTHER PROJECT OF MINE CALLED "RE-CSSET" FOR STYLING AND DEFAULT CROSS-BROWSER
+                </p>
+
+                <a class="anchor" rel="noopener noreferer" target="_blank"
+                    href="https://github.com/dherrrnandez/re-csset">RE-CSSET
+                    <svg class="anchor_svg" viewBox="0 0 93 91">
+                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                    </svg>
+                </a>
 
             </div>
         </div>
@@ -344,7 +367,7 @@
 
                 <p>
                     RE-CSSET IS A NPM PACKAGE TO REMOVE AND OVERRIDE THE DEFAULT BROWSER STYLES. THIS MAKES STYLING A
-                    LOT EASIER AND CROSS-BROWSER BY DEFAULT.
+                    LOT EASIER AND CROSS-BROWSER BY DEFAULT
                 </p>
 
                 <a class="anchor" rel="noopener noreferer" target="_blank"
@@ -364,6 +387,92 @@
                 <p>
                     I LEARNT HOW TO CREATE NPM PACKAGES DURING THIS PROJECT. ALSO I KNOW NOW HOW TO DEAL WITH NODE
                     MODULES
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+    <div BORDER MAKER class="modal_wrapper">
+        <div class="modal">
+            <div class="modal_header">
+                <div class="modal_close">
+                    <button class="close">
+                        <svg height="48" width="48">
+                            <path
+                                d="m12.45 37.65-2.1-2.1L21.9 24 10.35 12.45l2.1-2.1L24 21.9l11.55-11.55 2.1 2.1L26.1 24l11.55 11.55-2.1 2.1L24 26.1Z" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="modal_title">
+                    <h3>PAINLESS BORDER RADIUS</h3>
+                </div>
+            </div>
+
+            <div class="modal_info">
+
+                <p>
+                    THIS LITTLE PROJECT IS A BORDER MAKER. IT ALLOWS TO PREVIEW A BORDER RADIUS
+                </p>
+
+                <a class="anchor" rel="noopener noreferer" target="_blank"
+                    href="https://dherrrnandez.github.io/painless-border-radius/">PAINLESS BORDER RADIUS
+                    <svg class="anchor_svg" viewBox="0 0 93 91">
+                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                    </svg>
+                </a>
+
+                <img class="modal_mockups" src="./assets/b-maker.jpg">
+
+                <p>
+                    I DID THIS PROJECT TO UNDERSTAND JAVASCRIPT DOM MANIPULATION. I ALSO WORKED IN USING VARIABLES AND
+                    STRING METHODS TO DO DOM MANIPULATION
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+    <div CALCULATOR class="modal_wrapper">
+        <div class="modal">
+            <div class="modal_header">
+                <div class="modal_close">
+                    <button class="close">
+                        <svg height="48" width="48">
+                            <path
+                                d="m12.45 37.65-2.1-2.1L21.9 24 10.35 12.45l2.1-2.1L24 21.9l11.55-11.55 2.1 2.1L26.1 24l11.55 11.55-2.1 2.1L24 26.1Z" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="modal_title">
+                    <h3>CALCU<br>LATOR</h3>
+                </div>
+            </div>
+
+            <div class="modal_info">
+
+                <p>
+                    ONE OF MY FIRST PROJECTS, ALSO ONE THAT HELPED ME A LOT TO UNDERSTAND JAVASCRIPT
+                </p>
+
+                <a class="anchor" rel="noopener noreferer" target="_blank"
+                    href="https://dherrrnandez.github.io/calculator/">CALCULATOR
+                    <svg class="anchor_svg" viewBox="0 0 93 91">
+                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                    </svg>
+                </a>
+
+                <img class="modal_mockups" src="./assets/calculator-mockup.jpg">
+
+                <p>
+                    THIS WAS THE FIRST TIME I
+                    DID DOM MANIPULATION, ARRAY METHODS, ARROW FUNCTIONS, EVENT LISTENERS AND STRING METHODS TOGETHER
+                    FOR THE FIRST TIME
+                </p>
+
+                <p>
+                    I ALSO UNDERSTOOD DOM MANIPULATION, SCOPE, PARSING AND BOOLEANS. THIS PROJECT WAS FUN TO DO AND WAS
+                    USEFULL
                 </p>
 
             </div>
