--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="/assets/favicon.png" type="image/png">
     <title>Daniel Hernandez</title>
     <meta name="description"
-        content="Frontend Developer and UX/UI Designer. Currently working as freelancer. Available to work or team up to make digital products">
+        content="Frontend Developer. Currently working as freelancer. Available to work or team up to make digital products">
     <!-- DATA -->
     <meta name="language" content="english">
     <meta name="author" content="Daniel Hernandez">
@@ -69,15 +69,15 @@
         </div>
         <div class="hero_title">
             <h1>
-                <span>DEVELOPER</span>
+                <span>FRONTEND</span>
             </h1>
             <h1>
-                <span class="second">& DESIGNER</span>
+                <span class="second">DEVELOPER</span>
             </h1>
         </div>
         <div class="hero_info">
             <p>
-                I AM A DEVELOPER & UX/UI DESIGNER BASED IN ARGENTINA
+                I AM A FRONTEND DEVELOPER BASED IN ARGENTINA
             </p>
 
             <a target="_blank" rel="noopener noreferer" href="./assets/resume-en.pdf" class="anchor">
@@ -122,7 +122,7 @@
             </div>
             <div class="about_heading_text_wrapper">
                 <h3>DANIEL HERNANDEZ</h3>
-                <h4 class="to_load">DEVELOPER, DESIGNER & MARKETER</h4>
+                <h4 class="to_load">FRONTEND DEVELOPER & COFFEE LOVER</h4>
             </div>
         </div>
         <p>
