--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="hero_info">
             <p>
-                I AM A FRONTEND DEVELOPER BASED IN ARGENTINA
+                I'M DANIEL, A FRONTEND DEVELOPER BASED IN ARGENTINA 🇦🇷
             </p>
 
             <a target="_blank" rel="noopener noreferer" href="./assets/resume-en.pdf" class="anchor">
@@ -100,7 +100,7 @@
         <!-- <div class="work_text">
         </div> -->
         <div class="work_projects">
-            <a class="project to_load">MOOSHU<span>WEB APP</span> </a>
+            <!-- <a class="project to_load">MOOSHU<span>WEB APP</span> </a> -->
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
             <a class="project to_load">MOOSHU <span>WEBSITE</span> </a>
             <a class="project to_load">RE-CSSET<span>PACKAGE</span> </a>
@@ -122,7 +122,7 @@
             </div>
             <div class="about_heading_text_wrapper">
                 <h3>DANIEL HERNANDEZ</h3>
-                <h4 class="to_load">FRONTEND DEVELOPER & COFFEE LOVER</h4>
+                <h4 class="to_load">FRONTEND DEVELOPER WICH SUPER LIKES COFFEE</h4>
             </div>
         </div>
         <p>
@@ -131,23 +131,29 @@
             DEVELOPMENT
         </p>
         <h4 class="to_load">
-            I'M A DEVELOPER, A DESIGNER OR A MARKETER?
+            I'M A DEVELOPER & A FUTURE DESIGNER
         </h4>
         <p>
-            EVEN WHEN I'M CRAZY ABOUT DESIGN & MARKETING, I'M OVERALL A DEVELOPER. ALTHOUGH I'M CONVINCED THAT
-            THIS TRINITY ALLOWS ME TO UNDERSTAND MY WORK FAR MORE THAN IF I WAS JUST A DEVELOPER
+            I'M CONVINCED THAT BEING SPECIALIZED IS CRUCIAL
+            TO GIVE VALUE TO PRODUCTS, BUT I ALSO THINK THAT HAVING KNOWLEDGE OR EVEN INTEREST IN OTHER AREAS ALLOWS
+            YOUR WORK TO FLOW WITH A DIFFERENT APPROACH
+        </p>
+        <p>
+            THIS LITTLE INTEREST OR KNOWLEDGE IN DESIGN AND MARKETING HELPS ME TO UNDERSTAND MY WORK FAR MORE. ALSO IT
+            GIVES ME EMPATHY AND
+            UNDERSTANDING ABOUT THE TEAM AND HOW IT WORKS TO DELIVER IT'S ✨ MAJESTIC ✨ PRODUCTS
         </p>
 
         <h3>MY SKILLS</h3>
-        <p>MY STACK IS
-            <a class="anchor" rel="noopener noreferer" target="_blank" href="https://www.mongodb.com/mern-stack">MERN
+        <p>I WORK WITH
+            <a class="anchor" rel="noopener noreferer" target="_blank" href="https://reactjs.org/">REACT
                 <svg class="anchor_svg" viewBox="0 0 90 90">
                     <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
                 </svg>
             </a>
         </p>
-        <h4 class="to_load">MONGO, EXPRESS, REACT, NODE</h4>
-        <p>OTHER SKILLS: HTML & CSS / JAVASCRIPT / SASS / GIT / GITHUB / NEXT.JS / SQLITE / ELECTRON / FIGMA / PHOTOSHOP
+        <h4 class="to_load">WORKING IN FRONTEND I'VE ALSO USED:</h4>
+        <p>HTML & CSS / JAVASCRIPT / NODE.JS / SASS / GIT / GITHUB / NEXT.JS / SQLITE / ELECTRON / FIGMA / PHOTOSHOP
             / PIXEL PERFECT / BEM / DRY/ MOBILE FIRST / RESPONSIVE DESIGN / DEPLOYMENT / SEO</p>
     </section>
 
@@ -196,7 +202,7 @@
 
 
 
-    <div MOOSHU class="modal_wrapper">
+    <!-- <div MOOSHU class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -240,7 +246,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div BLUE class="modal_wrapper">
         <div class="modal">
@@ -314,8 +320,8 @@
             <div class="modal_info">
 
                 <p>
-                    THIS IS MOOSHU'S WEBSITE. I WORKED AROUND THE SAME COLORS OF THE SOFTWARE AND KEEPT THE SAME
-                    AESTHETIC
+                    THIS IS MOOSHU'S WEBSITE. I'M CURRENTLY DEVELOPING A CASH REGISTER APP AND THIS WOULD BE IT'S
+                    WEBSITE
                 </p>
 
                 <a class="anchor" rel="noopener noreferer" target="_blank"
@@ -328,7 +334,8 @@
                 <img class="modal_mockups" src="./assets/mooshu-website-mockup.jpg">
 
                 <p>
-                    I DID EMPHASIS ON KEEPING THE AESTHETIC OF THE MOOSHU PROJECT. IT'S BUILT WITH VANILLA JS, AND SASS
+                    I DID EMPHASIS ON KEEPING THE AESTHETIC OF THE MOOSHU PROJECT. THIS WEBSITE IS BUILT WITH VANILLA
+                    JS, AND SASS
 
                 </p>
 
